banner spacing fix

--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -2,7 +2,8 @@
 
 .banner {
 	width: 100%;
-	height: 40vh;
+	height: 45vh;
+	margin-top: 15vh;
 	overflow: hidden;
 	position: relative;
 	display: flex;
@@ -13,7 +14,7 @@
 		height: 50vh;
 	}
 	@include desktop {
-		height: 60vh;
+		height: 66vh;
 	}
 
 	&__text {
